--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 <body>
 	<header>
 		<div class="banner">
-			<h1>Star Wars Characters</h1>
-			<h2>Incomplete list</h2>
+			<div class="col-12">
+				<h1>Star Wars Characters</h1>
+				<h2>Incomplete list</h2>
+			</div>
 		</div>
 	</header>
 
